part2/2.04.ProjectV1.1/ns.yml
kind: Namespace
apiVersion: v1
metadata:
  name: project
  labels:
    name: project
