part2/2.04.ProjectV1.1/be_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: be
  template:
    metadata:
      labels:
        app: be
    spec:
      containers:
        - name: be
          image: k3d-myregistry.localhost:12345/project-be
