part2/2.04.ProjectV1.1/rproxy_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rproxy
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rproxy
  template:
    metadata:
      labels:
        app: rproxy
    spec:
      containers:
        - name: rproxy
          image: k3d-myregistry.localhost:12345/project-rproxy
