part2/2.04.ProjectV1.1/be_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: besvc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: be
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
