part2/2.04.ProjectV1.1/fe_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: fesvc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: fe
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
