part2/2.04.ProjectV1.1/rproxy_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: rproxysvc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: rproxy
  ports:
    - port: 2348
      protocol: TCP
      targetPort: 80
